--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>31/12/09</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Asia</b><br>Cause of death: <b>reportedly drowned after boat from Turkey shipwrecked off coast of Alexandroupoli (GR)</b><br>Source: FE/Migreurop/AP/Le Figaro/ANSA/Unita’/TodZam<br>
+Found dead: <b>Jan 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Süleyman Aksoy (man)</b><br>Region of origin: <b>Kurdistan-Turkey</b><br>Cause of death: <b>killed in suspicious circumstances among Turkish army after deportation from the Netherlands, conscientious objector</b><br>Source: AC/MNS/ARI/Fabel van de Illegaal<br>
 
 <br>
 
