--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Jul 14</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when boat sank off Samos (GR); 31 survivors</b><br>Source: Imkander<br>
+Found dead: <b>17/04/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammed Kamiran (man, 33)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>suicide, in Arodes (CY) after concerns about his wife and 4 children were ignored</b><br>Source: KISA/IRR<br>
 
 <br>
 
