--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Oct 99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nestor Z. (17)</b><br>Region of origin: <b>Burkina Faso</b><br>Cause of death: <b>jumped from window of refugee hostel onto houseboat on the Elbe River in Hamburg (DE)</b><br>Source: ARI<br>
+Found dead: <b>15/04/15</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ghana, Nigeria</b><br>Cause of death: <b>drowned after Christians were thrown overboard by Muslims during religious fight on journey from Libya to Sicily</b><br>Source: VK/MNS/CNN<br>
 
 <br>
 
