--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/04/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohamed Ezzoubair</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>shot by police in the Spanish enclave of Ceuta (ES), body hidden for some days near Moroccan border</b><br>Source: IRR<br>
+Found dead: <b>29/12/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Jabar</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>stowaway, crushed in back of truck near Port of Calais (FR), was trying to join his family in Great Britain</b><br>Source: CMS/The Local/IOM<br>
 
 <br>
 
