--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>25/12/96</b><br>Number of person: <b>283</b><br>Name, gender, age: <b>N.N. (children; women; men)</b><br>Region of origin: <b>India, Pakistan, Sri Lanka</b><br>Cause of death: <b>drowned near Malta after Greek captain intentionally sank vessel carrying refugees</b><br>Source: taz/UNHCR/DPA/MNS/ZDF/LR/FR/IRR/MUGAK<br>
+Found dead: <b>Feb 12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rexhep Salijaj (man)</b><br>Region of origin: <b>Kosovo</b><br>Cause of death: <b>suicide, when his permit to stay in Belgium expired, was to be deported to Kosovo away from son and family</b><br>Source: MNS<br>
 
 <br>
 
