--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/10/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hasun Albaadzh (man)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>died of medical neglect in Busmantsi detention centre (BG) where he had been held for 3 years</b><br>Source: IRR<br>
+Found dead: <b>14/10/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman, ±30)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>hit by car on A16 highway in Calais (FR) while trying to reach Great Britain</b><br>Source: VoixDuNord/Passeurs d’hospitalités<br>
 
 <br>
 
