--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>22/03/09</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Maghreb</b><br>Cause of death: <b>disappeared when Spanish patrol intercepted and transferred passengers from their boat off Cabo de Gata (ES)</b><br>Source: MUGAK/EFE/PUB/NOB<br>
+Found dead: <b>03/02/14</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>shot in chest in industrial zone of Marcel Doret in Calais (FR)</b><br>Source: CMS<br>
 
 <br>
 
