--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>05/06/08</b><br>Number of person: <b>13</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>drowned after stormy weather caused boat to sink 50 km off coast of Libya</b><br>Source: CDS/SP/NOB<br>
+Found dead: <b>15/09/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Manuel Bravo (man, 35)</b><br>Region of origin: <b>Angola</b><br>Cause of death: <b>suicide, hanged himself at Yarl’s Wood removal centre (GB) to prevent deportation of his son</b><br>Source: NCADC/BBC/MNS/ST/TI/Leedstoday/IRR<br>
 
 <br>
 
