--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/11/05</b><br>Number of person: <b>18</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>6 drowned after boat capsized off coast of Gran Canaria; 12 missing</b><br>Source: MNS/ST/FE/ELM/ABC/Raz/MUGAK<br>
+Found dead: <b>12/12/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan</b><br>Cause of death: <b>stowaway, suffocated on cargo ship travelling from Cameroon to Spain</b><br>Source: MNS/ST<br>
 
 <br>
 
