--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/08/14</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>missing, feared drowned in the Mediterranean Sea; 73 survived</b><br>Source: UNHCR<br>
+Found dead: <b>18/08/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Liberia</b><br>Cause of death: <b>died of heart attack after arriving at refugee centre in Lampedusa (IT)</b><br>Source: LR/IPL/Unipa<br>
 
 <br>
 
