--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/08/03</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man, 25)</b><br>Region of origin: <b>Liberia</b><br>Cause of death: <b>died of heart attack after arriving at refugee centre in Lampedusa (IT)</b><br>Source: LR/IPL/Unipa<br>
+Found dead: <b>2002</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned while trying to cross Iranian-Turkish border near Örtülü (TR)</b><br>Source: HRFT<br>
 
 <br>
 
