--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/11/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>died in La Candelaria Hospital, Tenerife (ES) 5 days after his boat was intercepted</b><br>Source: ElDia/Top News/ABC/FE<br>
+Found dead: <b>10/12/04</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat carrying 17 people sank off coast of Samos (GR)</b><br>Source: MNS/NOB<br>
 
 <br>
 
