--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>10/12/04</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>drowned after boat carrying 17 people sank off coast of Samos (GR)</b><br>Source: MNS/NOB<br>
+Found dead: <b>18/02/08</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Barhan Ahmed (man, 28)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>suicide, set himself on fire in Nelson (GB), depressed after his asylum claim was rejected</b><br>Source: IRR<br>
 
 <br>
 
