--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/07/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Russia</b><br>Cause of death: <b>suicide, asylum seeker at immigration registration centre in Pabrade (LT)</b><br>Source: MNS<br>
+Found dead: <b>08/10/07</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>boat carrying 117 migrants found near Zakynthos (GR), 1 drowned, 3 missing</b><br>Source: VK<br>
 
 <br>
 
