--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/08/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Fisha (man, 22)</b><br>Region of origin: <b>Eritrea</b><br>Cause of death: <b>stowaway, jumped out of van and hit by several vehicles on A16 highway near Calais (FR)</b><br>Source: VoixDuNord/Ya.N/CMS<br>
+Found dead: <b>18/08/15</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (1 baby)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat capsized on way from Turkey to Kos (GR)</b><br>Source: MorningJournal<br>
 
 <br>
 
