--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/07/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Adams John (baby, 7 months)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly died of heart failure caused by hypothermia after arrival in Fuerteventura (ES)</b><br>Source: PICUM/ELM/MNS/ST/FE/NOB/APDHA<br>
+Found dead: <b>03/12/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Joseph (boy, 16)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>hit by truck on A16 highway in Calais (FR) while trying to reach Great Britain</b><br>Source: Libération/AFP/VoixDuNord<br>
 
 <br>
 
