--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/06/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>You Long Zhong (man)</b><br>Region of origin: <b>China</b><br>Cause of death: <b>suffocated in sealed trailer of truck on ferry from Zeebrugge (BE) to Dover (GB)</b><br>Source: VK/Parool/DPA/AP/MUGAK/Reu./AP/NBK/NCADC<br>
+Found dead: <b>04/09/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Samir Hashemi (man, 27)</b><br>Region of origin: <b>Iran</b><br>Cause of death: <b>suicide, in refugee centre in Kirchheim (DE) out of despair over living conditions</b><br>Source: RTA/INDd/VRF/Karawane<br>
 
 <br>
 
