--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>23/07/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Nazmieh Chahrour (woman, 23)</b><br>Region of origin: <b>Palestine</b><br>Cause of death: <b>suicide, in prison in Berlin (DE) after being told she would be deported</b><br>Source: CARF/AR InfoNetw/taz/ZAG<br>
+Found dead: <b>13/06/05</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned after their boat sank off coast of Morocco while travelling to Spain</b><br>Source: APDHA<br>
 
 <br>
 
