--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/09/13</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing after boat of 42 capsized off coast of the Spanish enclave of Ceuta (ES); 30 rescued</b><br>Source: MNS/EP<br>
+Found dead: <b>21/07/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>found dead on side of A16 highway near Calais (FR) trying to reach Great Britain</b><br>Source: AFP/France3<br>
 
 <br>
 
