--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>06/08/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>T.K. (man, 30)</b><br>Region of origin: <b>Uganda</b><br>Cause of death: <b>suicide, in Verne immigration removal centre (GB) after being denied medication</b><br>Source: Dorset Echo/DetainedVoices/Sputnik<br>
+Found dead: <b>09/08/09</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>killed during escape attempt from Benghazi detention centre (LY) after guards opened fire</b><br>Source: FE/GiovaniE<br>
 
 <br>
 
