--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/04/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>Nigeria</b><br>Cause of death: <b>drowned, found dead 3 days after Libyan boat shipwrecked near Pantelleria (IT)</b><br>Source: LR/FE<br>
+Found dead: <b>13/08/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Marius B. (man, 45)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>suicide, hanged himself in detention centre in Nimes (FR) after being held for 15 days without charge</b><br>Source: IRR<br>
 
 <br>
 
