--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/06/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Dominican Republic</b><br>Cause of death: <b>stowaways, froze to death while hiding in plane bound for Stockholm (SE)</b><br>Source: BBC<br>
+Found dead: <b>09/11/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Solomon Mforbei Fusi (boy, 15)</b><br>Region of origin: <b>Cameroon</b><br>Cause of death: <b>stowaway, fell from undercarriage of Switzerland-bound airplane in Lauchringen (DE)</b><br>Source: AP/MNS/NZZ/ZAG<br>
 
 <br>
 
