--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>29/01/04</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>drowned after boat sank during storm near Karistos (GR)</b><br>Source: NOB<br>
+Found dead: <b>26/07/06</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned when boat sank near Mahdia (TN) on way to Italy</b><br>Source: ST/ELM/FE/Reu./IPL<br>
 
 <br>
 
