--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/09/95</b><br>Number of person: <b>12</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>reportedly drowned after dinghy caught fire and capsized in the Strait of Otranto</b><br>Source: CDS/FECL/TL<br>
+Found dead: <b>Jan 05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl)</b><br>Region of origin: <b>Ghana</b><br>Cause of death: <b>attacked and killed by wild dogs in Madama, Niger while travelling to Libyan border</b><br>Source: LESP/Gatti/Migreurop<br>
 
 <br>
 
