--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/12/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Naeen Akram (man, 24)</b><br>Region of origin: <b>Pakistan</b><br>Cause of death: <b>drowned in the Neisse River on Polish-German border near Bahren-Zelz (DE)</b><br>Source: LausitzerR/TS/ND/FFM/LRBrand/ZAG<br>
+Found dead: <b>14/01/17</b><br>Number of person: <b>180</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Eritrea, Ethiopia</b><br>Cause of death: <b>8 drowned when boat sank due to engine failure off coast of Libya; 172 missing, 4 rescued</b><br>Source: Reu./SofiaGlobe/Newsaust/ScrollToday<br>
 
 <br>
 
