--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/01/17</b><br>Number of person: <b>180</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia, Eritrea, Ethiopia</b><br>Cause of death: <b>8 drowned when boat sank due to engine failure off coast of Libya; 172 missing, 4 rescued</b><br>Source: Reu./SofiaGlobe/Newsaust/ScrollToday<br>
+Found dead: <b>05/08/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (pregnant woman, 30)</b><br>Region of origin: <b>Sudan</b><br>Cause of death: <b>reportedly thrown overboard by other migrants on boat to Italy</b><br>Source: LS/STR/ILM/Unipa<br>
 
 <br>
 
