--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>14/04/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>stowaways, found dead in trailer of truck at the port of Almería (ES)</b><br>Source: AFP/EP<br>
+Found dead: <b>26/01/96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (19)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>set fire to his bed after being held in Bergen detention centre (NE) for longer than the permitted time</b><br>Source: Samora/Svenska Dagbladet/ST<br>
 
 <br>
 
