--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>30/06/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Halim Dener (boy, 17)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>shot by off-duty policeman while hanging ERNK posters in Hannover (DE)</b><br>Source: ZAG<br>
+Found dead: <b>16/12/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>died of cold and exhaustion after swimming to the Spanish enclave of Ceuta (ES)</b><br>Source: MNS/ELM/DiarioVasco<br>
 
 <br>
 
