--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>07/01/00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Brahim Akrouk (man, 36)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died in a fire caused by rebellion in detention centre in Seraino Vulpitta di Trappani (IT)</b><br>Source: ILM/CDS<br>
+Found dead: <b>12/09/01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, decomposing bodies washed ashore in El Ejido (ES)</b><br>Source: MNS/ODP<br>
 
 <br>
 
